Link hover color fix.  Banner text line spacing fix.  Related slider responsiveness fix.

--- a/src/jazkarta.plonetheme/src/jazkarta/plonetheme/theme/less/jazkarta.less
+++ b/src/jazkarta.plonetheme/src/jazkarta/plonetheme/theme/less/jazkarta.less
@@ -13,7 +13,7 @@
 @jazkarta-header-background:                @text-tile-background;
 @jazkarta-spacer-background:                @text-tile-mouseover-background;
 @plone-link-color:							@text-tile-background;
-@plone-link-hover-color:					@text-tile-mouseover-background;
+@plone-link-hover-color:					@jazkarta-highlight-color;
 @plone-link-color-on-dark:					white;
 @plone-default-published-color:				#007bb3; //published and external same color
 @plone-body-bg:								#fff;
@@ -354,6 +354,7 @@ header#content-header {
 		border-bottom: none;
 		display: inline-block;
         margin-top: 80px;
+        width: 40%
 	}
     #portal-footer {
         position: relative;
@@ -367,7 +368,7 @@ header#content-header {
 #portal-footer {
 	.clearfix();
 	.portletWrapper {
-		width: 32.5%;
+		width: 30%;
 		vertical-align: top;
 		border-bottom: none;
 		.portletHeader {
@@ -550,6 +551,10 @@ dl.InfoList dd {
         position: absolute;
         bottom: 2em;
         text-shadow: 1px 1px 2px #000000;
+        line-height: 150%;
+        h3 {
+            line-height: 150%;
+        }
         @media (max-width: @plone-grid-float-breakpoint-max) {
             font-size: 150%;
             bottom: 0;
@@ -893,25 +898,25 @@ dl.InfoList dd {
 }
 .slider-height-mixin {
     @media (max-width: @plone-grid-float-breakpoint-max) {
-        height: 128px;
+        height: 80px;
     } 
     @media (min-width: @plone-screen-sm-min) {
-        height: 170px;
+        height: 135px;
     } 
     .plone-toolbar-left-expanded & {
         @media (min-width: (@plone-screen-sm-min)) {
-            height: 128px;
+            height: 80px;
         }
         @media (min-width: (@plone-screen-sm-min + @plone-left-toolbar-expanded)) {
-            height: 170px;
+            height: 135px;
         }
     }
     .plone-toolbar-left-default & {
         @media (min-width: (@plone-screen-sm-min)) {
-            height: 128px;
+            height: 80px;
         }
         @media (min-width: (@plone-screen-sm-min + @plone-left-toolbar)) {
-            height: 170px;
+            height: 135px;
         }
     }
     @media (min-width: @plone-screen-lg-min) {
@@ -919,7 +924,7 @@ dl.InfoList dd {
     }
     .plone-toolbar-left-expanded & {
         @media (min-width: (@plone-screen-lg-min)) {
-            height: 170px;
+            height: 135px;
         }
         @media (min-width: (@plone-screen-lg-min + @plone-left-toolbar-expanded)) {
             height: 208px;
@@ -927,7 +932,7 @@ dl.InfoList dd {
     }
     .plone-toolbar-left-default & {
         @media (min-width: (@plone-screen-lg-min)) {
-            height: 170px;
+            height: 135px;
         }
         @media (min-width: (@plone-screen-lg-min + @plone-left-toolbar)) {
             height: 208px;
@@ -937,25 +942,25 @@ dl.InfoList dd {
 .slider-item-mixin {
     .slider-height-mixin;
     @media (max-width: @plone-grid-float-breakpoint-max) {
-        width: 190px;
+        width: 120px;
     } 
     @media (min-width: @plone-screen-sm-min) {
-        width: 253px;
+        width: 200px;
     } 
     .plone-toolbar-left-expanded & {
         @media (min-width: (@plone-screen-sm-min)) {
-            width: 190px;
+            width: 120px;
         }
         @media (min-width: (@plone-screen-sm-min + @plone-left-toolbar-expanded)) {
-            width: 253px;
+            width: 200px;
         }
     }
     .plone-toolbar-left-default & {
         @media (min-width: (@plone-screen-sm-min)) {
-            width: 190px;
+            width: 120px;
         }
         @media (min-width: (@plone-screen-sm-min + @plone-left-toolbar)) {
-            width: 253px;
+            width: 200px;
         }
     }
     @media (min-width: @plone-screen-lg-min) {
@@ -963,7 +968,7 @@ dl.InfoList dd {
     }    
     .plone-toolbar-left-expanded & {
         @media (min-width: (@plone-screen-lg-min)) {
-            width: 253px;
+            width: 200px;
         }
         @media (min-width: (@plone-screen-lg-min + @plone-left-toolbar-expanded)) {
             width: 310px;
@@ -971,7 +976,7 @@ dl.InfoList dd {
     }
     .plone-toolbar-left-default & {
         @media (min-width: (@plone-screen-lg-min)) {
-            width: 247px;
+            width: 200px;
         }
         @media (min-width: (@plone-screen-lg-min + @plone-left-toolbar)) {
             width: 310px;
